# Units

./: .gitignore  CMakeLists.txt  README.md  doxy.cfg
Algorithm/: CMakeLists.txt  algo_lib.h  dictionary.h  double_counter_map.h  iterator_range.h  lazy_value.h  object_pool.h  stack_vector.h
Algorithm/tests/: test_algo_lib.cpp
BinaryFStream/: CMakeLists.txt  bintext_fstream.cpp  bintext_fstream.h
CnfReader/: CMakeLists.txt  CMakescript.cmake  cnfreader.cpp  cnfreader.h
CnfReader/tests/: test_cnf_reader.cpp
ComPortReader/: CMakeLists.txt  CMakescript.cmake  com_port_gw.cpp  com_port_gw.h  serial_port_linapi.cpp  serial_port_linapi.h  serial_port_linapi_c.c  serial_port_linapi_c.h  serial_port_winapi.cpp  serial_port_winapi.h  xserial.cpp  xserial.hpp
ContainerOutput/: CMakeLists.txt  CMakescript.cmake  class_logger.h  container_output.h  gwLogger.cpp  gwLogger.h
ContainerOutput/tests/: test_gw_logger.cpp
Date/: CMakeLists.txt  date.cpp  date.h
Fractions/: fraction.cpp  fraction.h
IniParser/: CAParam.dfl  CMakeLists.txt  iniparser.cpp  iniparser.h
IniParser/tests/: test_iniparser.cpp
Math/: CMakeLists.txt  CMakescript.cmake  array_view.h  geom_lib.cpp  geom_lib.h  gw_algorithm.cpp  gw_algorithm.h  gw_matrix_view.h  gw_solid_matrix.cpp  gw_solid_matrix.h  gw_static_matrix.h  gw_triangle_matrix.cpp  gw_triangle_matrix.h  gwmatrix.cpp  gwmatrix.h  gwmatrix_old.h  interpol.cpp  interpol.h  leastsquares.cpp  leastsquares.h  math_lib.cpp  math_lib.h  nonlinearsolver.cpp  nonlinearsolver.h  numeric_integration.cpp  numeric_integration.h  polynom.cpp  polynom.h  sle.cpp  sle.h  solid_matrix.h
Math/tests/: test_math_lib.cpp  test_matrix_array.cpp
MetrologicNumbers/: CMakeLists.txt  CMakescript.cmake  metr_number.cpp  metr_number.h
MetrologicNumbers/tests/: test_metr_number_lib.cpp
MultiThreadingUtils/: synchronized.h
StringUnits/: CMakeLists.txt  CMakescript.cmake  fileutils.cpp  fileutils.h  metrologic_round.cpp  metrologic_round.h  param_str_utils.cpp  param_str_utils.h  str_utils.cpp  str_utils.h
StringUnits/tests/: str_utils_boost_ut.cpp
TestFrameWork/: test_runner.h
UnitTests/: FileUtilsTests.cpp  FileUtilsTests.h  MathLibTests.cpp  MathLibTests.h  NonLinearSolverTests.cpp  NonLinearSolverTests.h  NumericIntegrationTests.cpp  NumericIntegrationTests.h  gwMatrixTests.cpp  gwMatrixTests.h  gwstrTests.cpp  gwstrTests.h  leastsquaresTests.cpp  leastsquaresTests.h  sle_tests.cpp  sle_tests.h  str_utils_boost_ut.cpp  str_utils_unit_tests.cpp  str_utils_unit_tests.h
UnitTests/strfunctest/: main.cpp  strfunctest.cbp
UnitTests/utDate/: utDate.cbp
UnitTests/utFileUtilsTests/: main.cpp  utFileUtilsTests.cbp
UnitTests/utFractions/: main.cpp  utFractions.cbp
UnitTests/utInterpol/: main.cpp  utInterpol.cbp
UnitTests/utMathLib/: main.cpp  utMathLib.cbp
UnitTests/utMatrix/: main.cpp  utMatrix.cbp
UnitTests/utMetrNums/: utMetrNums.cbp
UnitTests/utNumericIntegration/: main.cpp  utNumericIntegration.cbp
csv/: CMakeLists.txt  csv_reader.cpp  csv_reader.h  csv_writer.h
csv/example/: main_writer.cpp
csv/tests/: test_csv_lib.cpp
dll_loader/: CMakeLists.txt  dll_loader.cpp  dll_loader.h
profiler/: CMakeLists.txt  profile.h  profile_advanced.cpp  profile_advanced.h  profile_advanced_ho.h
rapidjson_getters/: rapidjson_getters.h
